<resources>
    <string name="app_name">Table of cheats</string>
    <string name="add">Add</string>
    <string name="games">Games</string>
    <string name="favorites">Favorites</string>
    <string name="remove_favorite_dialog_message">Are you sure to remove the game from your favorites? </string>
    <string name="remove_favorite_dialog_title">Removing from favorites</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cheats">Cheats</string>
    <string name="name">Name</string>
    <string name="year">Release year</string>
    <string name="add_cheats_dialog_message">Are you sure to add this cheats to application</string>
    <string name="add_cheats_dialog_title">Warning</string>
    <string name="music_button_start">Start track</string>
    <string name="music_button_stop">Stop track</string>
    <string name="marked_as_favorite">marked as favorite</string>
    <string name="unmarked_as_favorite">unmarked as favorite</string>
    <string name="error_input_cheats">You didn\'t fill all fields</string>
    <string name="adding_cheats">The game was added</string>
    <string name="color_settings">Color settings</string>
    <string name="no_favorite_games">You havn\'t any favorite games.</string>
    <string name="unvalide_game">Your input isn\'t valide.</string>
</resources>
